<resources>
    <string name="app_name">MMS_Lab1</string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter your weight</string>
    <string name="height">Height</string>
    <string name="enter_height">Enter your height</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">Your BMI</string>
    <string name="about">About</string>
    <string name="imperial">Imperial mode</string>
    <string name="alert_header">BMI info</string>
    <string name="alert_black">Calculate BMI first!</string>
    <string name="alert_blue">You should eat more!</string>
    <string name="alert_green">Everything is fine!</string>
    <string name="alert_yellow">You should start diet!</string>
    <string name="alert_red">You should visit doctor!</string>
</resources>